# fpga_perfect_hash

./: .gitignore  CMakeLists.txt  README.md
experiments/: CMakeLists.txt
include/: bit_hash.hpp  bit_hash_anneal.hpp  bit_hash_cnf.hpp  bit_hash_cpp.hpp  bit_hash_history.hpp  bit_hash_polish.hpp  bit_hash_relink.hpp  bit_hash_vhdl.hpp  bit_vector.hpp  cnf_helpers.hpp  family_hash.hpp  key_value_set.hpp  shuffle.hpp  solve_context.hpp  solver_anneal.hpp  solver_cnf.hpp  solver_grasp.hpp  weighted_shuffle.hpp
notes/: hit-ideas.md  minimal.md  references.md  wide-hash-2.md
src/: CMakeLists.txt
src/test/: CMakeLists.txt  parameterisable_hashes.py  perfect_hashing.py  test_bit_hash.cpp  test_bit_hash_history.cpp  test_shuffle.cpp
src/tools/: CMakeLists.txt  anneal_fpga_hash.cpp  anneal_fpga_hash_v2.cpp  find_fpga_hash.cpp  generate_random_hash_input.cpp  naboo_fpga_hash.cpp  perfect_fpga_hash.cpp  polish_fpga_hash.cpp  random_fpga_hash.cpp  write_fpga_hash_cpp.cpp  write_fpga_hash_vhdl.cpp
